--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lottie: ^3.1.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_native_splash: ^2.4.0
 
 flutter:
   uses-material-design: true
@@ -25,3 +28,9 @@ flutter:
     - family: valo-font
       fonts:
         - asset: assets/fonts/valo-font.ttf
+
+flutter_native_splash:
+  color: "#1F1F1F"
+  image: assets/images/splash.png
+  android: true
+  ios: true
