--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   sdk: '>=3.4.0-282.3.beta <4.0.0'
 
 dependencies:
+  firebase_analytics: ^11.1.0
+  firebase_core: ^3.1.1
   flutter:
     sdk: flutter
   lottie: ^3.1.2
