--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: '>=3.4.0-282.3.beta <4.0.0'
 
 dependencies:
+  bottom_navy_bar: ^6.0.0
   firebase_analytics: ^11.1.0
   firebase_core: ^3.1.1
   flutter:
@@ -25,6 +26,17 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/maps/Bind.png
+    - assets/images/maps/Haven.png
+    - assets/images/maps/Split.png
+    - assets/images/maps/Ascent.png
+    - assets/images/maps/Icebox.png
+    - assets/images/maps/Breeze.png
+    - assets/images/maps/Fracture.png
+    - assets/images/maps/Pearl.png
+    - assets/images/maps/Lotus.png
+    - assets/images/maps/Sunset.png
+    - assets/images/maps/Abyss.png
 
   fonts:
     - family: valo-font
