--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,30 @@ flutter:
     - assets/images/maps/Lotus.png
     - assets/images/maps/Sunset.png
     - assets/images/maps/Abyss.png
+    - assets/images/agents/Brimstone.png
+    - assets/images/agents/Viper.png
+    - assets/images/agents/Omen.png
+    - assets/images/agents/Killjoy.png
+    - assets/images/agents/Cypher.png
+    - assets/images/agents/Sova.png
+    - assets/images/agents/Sage.png
+    - assets/images/agents/Phoenix.png
+    - assets/images/agents/Jett.png
+    - assets/images/agents/Reyna.png
+    - assets/images/agents/Raze.png
+    - assets/images/agents/Breach.png
+    - assets/images/agents/Skye.png
+    - assets/images/agents/Yoru.png
+    - assets/images/agents/Astra.png
+    - assets/images/agents/KAYO.png
+    - assets/images/agents/Chamber.png
+    - assets/images/agents/Neon.png
+    - assets/images/agents/Fade.png
+    - assets/images/agents/Harbor.png
+    - assets/images/agents/Gekko.png
+    - assets/images/agents/Deadlock.png
+    - assets/images/agents/Iso.png
+    - assets/images/agents/Clove.png
 
   fonts:
     - family: valo-font
