--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.4.0
   lottie: ^3.1.2
+  photo_view: ^0.15.0
   shared_preferences: ^2.2.3
 
 dev_dependencies:
@@ -36,6 +37,8 @@ flutter:
     - assets/images/agents/
 
     - assets/images/sides/
+
+    - assets/images/mapsWiki/
 
     # Lineups BRIMSTONE
 
