--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
+  font_awesome_flutter: ^10.7.0
   lottie: ^3.1.2
   photo_view: ^0.15.0
+  random_avatar: ^0.0.8
+  random_name_generator: ^1.3.0
   shared_preferences: ^2.2.3
 
 dev_dependencies:
