--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   lottie: ^3.0.0
   http: ^1.2.1
   shimmer: ^3.0.0
+  flutter_swiper_view: ^1.1.8
 
 dev_dependencies:
   flutter_test:
