--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: ^1.2.1
   shimmer: ^3.0.0
   flutter_swiper_view: ^1.1.8
+  u_credit_card: ^1.3.1
 
 dev_dependencies:
   flutter_test:
