--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,6 @@ environment:
 
 dependencies:
   bottom_navy_bar: ^6.0.0
-  firebase_analytics: ^11.1.0
-  firebase_core: ^3.1.1
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
@@ -19,21 +17,21 @@ dependencies:
   random_avatar: ^0.0.8
   random_name_generator: ^1.3.0
   shared_preferences: ^2.2.3
-  
-  #lottie: ^3.1.2
-  #riot_api: ^0.0.9
-  #val_api: ^0.0.3
-  
   lottie: ^3.0.0
   http: ^1.2.1
   shimmer: ^3.0.0
   flutter_swiper_view: ^1.1.8
-  u_credit_card: ^1.3.1
+
+  cloud_firestore: ^5.1.0
+  google_sign_in: ^6.2.1
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  firebase_analytics: ^11.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
