--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
   firebase_analytics: ^11.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
