--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^5.1.2
   firebase_analytics: ^11.2.0
   intl: ^0.19.0
+  timezone: ^0.9.4
 
 dev_dependencies:
   flutter_test:
