--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   http: ^1.2.1
   shimmer: ^3.0.0
   flutter_swiper_view: ^1.1.8
-
   cloud_firestore: ^5.1.0
   google_sign_in: ^6.2.1
   firebase_core: ^3.2.0
@@ -29,6 +28,7 @@ dependencies:
   firebase_analytics: ^11.2.0
   intl: ^0.19.0
   timezone: ^0.9.4
+  intl_translation: ^0.20.0
 
 dev_dependencies:
   flutter_test:
