--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   intl: ^0.19.0
   timezone: ^0.9.4
   intl_translation: ^0.20.0
+  flutter_slidable: ^3.1.1
+  slideable: ^0.0.2
 
 dev_dependencies:
   flutter_test:
