--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   intl_translation: ^0.20.0
   flutter_slidable: ^3.1.1
   slideable: ^0.0.2
+  firebase_storage: ^12.1.1
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
