--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   slideable: ^0.0.2
   firebase_storage: ^12.1.1
   path_provider: ^2.1.3
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/
+
+    - assets/translations/
+
     - assets/images/
 
     - assets/images/loginScreen/
