--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^12.1.1
   path_provider: ^2.1.3
   easy_localization: ^3.0.7
+  dio: ^5.5.0+1
 
 dev_dependencies:
   flutter_test:
