--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   path_provider: ^2.1.3
   easy_localization: ^3.0.7
   dio: ^5.5.0+1
+  flutter_spinkit: ^5.2.1
+  image_picker: ^1.1.2
+  
 
 dev_dependencies:
   flutter_test:
