--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   image_picker: ^1.1.2
   path: ^1.9.0
+  carousel_slider: ^4.2.1
   
 
 dev_dependencies:
