--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   image_picker: ^1.1.2
   path: ^1.9.0
   carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.2.0+3
+  like_button: ^2.0.5
   
 
 dev_dependencies:
