--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.2.0+3
   like_button: ^2.0.5
+  google_mobile_ads: ^5.1.0
   
 
 dev_dependencies:
